name:                mci-haskell
version:             0.1.0.0
synopsis:            Haskell version of Modern Compiler Implementation.
description:         Haskell version of Modern Compiler Implementation.
homepage:            https://github.com/Chobbes/mci-haskell
license:             MIT
license-file:        LICENSE
author:              Calvin Beck
maintainer:          hobbes@ualberta.ca
copyright:           Calvin Beck
category:            Compilers
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      straight-line
  exposed-modules:     StraightLine
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2.1 && < 2.3
                     , containers >= 0.5.7.1 && < 0.6
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Chobbes/mci-haskell
